2011-10-21  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gas/s390/zarch-z10.d: Add CPUMF instructions.
	* gas/s390/zarch-z10.s: Likewise.

2011-10-18  Jie Zhang  <jie@codesourcery.com>
	    Julian Brown  <julian@codesourcery.com>

	* gas/arm/adrl.d: Adjust.
	* gas/arm/immed2.d: New test.
	* gas/arm/immed2.s: New test.

2011-10-13  James Greenhalgh  <james.greenhalgh@arm.com>

	* gas/arm/ldr-bad.s: New testcase.
	* gas/arm/ldr-bad.l: Likewise.
	* gas/arm/ldr-bad.d: Likewise.
	* gas/arm/ldr.s: Likewise.
	* gas/arm/ldr.d: Likewise.
	* gas/arm/ldr-t-bad.s: Likewise.
	* gas/arm/ldr-t-bad.l: Likewise.
	* gas/arm/ldr-t-bad.d: Likewise.
	* gas/arm/ldr-t.s: Likewise.
	* gas/arm/ldr-t.d: Likewise.
	* gas/arm/sp-pc-usage-t.s: Correct.
	* gas/arm/sp-pc-usage-t.d: Update accordingly.

2011-09-28  Jan Beulich  <jbeulich@suse.com>

	* gas/ppc/476.s: Fix lswi first operand.
	* gas/ppc/476.d: Adjust expected output.
	* gas/ppc/a2.s: Fix lswi first operand.
	* gas/ppc/a2.d: Adjust expected output.
	* gas/ppc/power6.s: Fix lfdpx first operand.
	* gas/ppc/power6.d: Adjust expected output.

2011-09-28  Kai Tietz  <ktietz@redhat.com>

	* gas/pe/section-exclude.d: Correct testcase.

2011-09-27  Kai Tietz  <ktietz@redhat.com>

	* gas/pe/pe.exp: Add new testcase.
	* gas/pe/section-exclude.d: New file.
	* gas/pe/section-exclude.s: New file.

2011-09-27  David S. Miller  <davem@davemloft.net>

	* gas/sparc/hpcvis3.s: Update to use float reg for random insn.
	* gas/sparc/hpcvis3.d: Likewise.

2011-09-26  David S. Miller  <davem@davemloft.net>

	* gas/sparc/ima.d: New test.
	* gas/sparc/ima.s: New test source.
	* gas/sparc/sparc.exp: Run new test.

2011-09-21  David S. Miller  <davem@davemloft.net>

	* gas/sparc/hpcvis3.s: Update for fixed fchksum16 mnemonic.
	* gas/sparc/hpcvis3.d: Likewise.

	* gas/sparc/imm-plus-rreg.d: Fix address regex for 64-bit.
	* gas/sparc/save-args.d: Likewise.
	* gas/sparc/ticc-imm-reg.d: Likewise, add -32 to options.
	* gas/sparc/v8-movwr-imm.d: Likewise.
